--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     package="net.mm2d.customtabsbrowser"
     >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -16,35 +16,34 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning"
         >
-        <activity
-            android:name=".IntentDispatcher"
-            android:configChanges="orientation|keyboard|keyboardHidden|smallestScreenSize"
-            />
-
         <activity-alias
-            android:name=".StartActivity"
+            android:name=".EntryPoint"
             android:label="@string/app_name"
             android:targetActivity=".IntentDispatcher"
             >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <category android:name="android.intent.category.APP_BROWSER"/>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.APP_BROWSER" />
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:scheme="http"/>
-                <data android:scheme="https"/>
+                <data android:scheme="http" />
+                <data android:scheme="https" />
             </intent-filter>
         </activity-alias>
 
+        <activity
+            android:name=".IntentDispatcher"
+            android:configChanges="orientation|keyboard|keyboardHidden|smallestScreenSize"
+            />
         <activity
             android:name=".BrowserActivity"
             android:configChanges="orientation|keyboard|keyboardHidden|smallestScreenSize"
@@ -63,7 +62,7 @@
             tools:ignore="ExportedService"
             >
             <intent-filter>
-                <action android:name="android.support.customtabs.action.CustomTabsService"/>
+                <action android:name="android.support.customtabs.action.CustomTabsService" />
             </intent-filter>
         </service>
     </application>
