--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
         <activity
             android:name=".IntentDispatcher"
             android:configChanges="orientation|keyboard|keyboardHidden|smallestScreenSize"
+            android:theme="@style/AppTheme.Translucent"
             />
         <activity
             android:name=".BrowserActivity"
