--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,26 +4,26 @@ apply plugin: "kotlin-android-extensions"
 apply plugin: "com.github.ben-manes.versions"
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion(29)
 
     defaultConfig {
-        applicationId "net.mm2d.customtabsbrowser"
-        minSdkVersion 21
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        applicationId = "net.mm2d.customtabsbrowser"
+        minSdkVersion(21)
+        targetSdkVersion(29)
+        versionCode = 1
+        versionName = "1.0"
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = "1.8"
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled = false
+            proguardFiles(getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro")
         }
     }
     testOptions {
@@ -32,27 +32,26 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.browser:browser:1.2.0'
-    implementation 'com.google.android.material:material:1.1.0'
-    testImplementation 'junit:junit:4.13'
-    testImplementation 'org.robolectric:robolectric:4.3.1'
+    implementation("org.jetbrains.kotlin:kotlin-stdlib:1.4.0")
+    implementation("org.jetbrains.kotlin:kotlin-reflect:1.4.0")
+    implementation("androidx.appcompat:appcompat:1.2.0")
+    implementation("androidx.constraintlayout:constraintlayout:2.0.1")
+    implementation("androidx.recyclerview:recyclerview:1.1.0")
+    implementation("androidx.core:core-ktx:1.3.1")
+    implementation("androidx.browser:browser:1.2.0")
+    implementation("com.google.android.material:material:1.2.0")
+    testImplementation("junit:junit:4.13")
+    testImplementation("org.robolectric:robolectric:4.3.1")
 }
 
-dependencyUpdates.resolutionStrategy {
-    componentSelection { rules ->
-        rules.all { selection ->
-            boolean rejected = ["alpha", "beta", "rc", "cr", "m", "preview", "b", "ea", "eap"].any { qualifier ->
-                selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-+]*/
-            }
-            if (rejected) {
-                selection.reject("Release candidate")
-            }
-        }
+def isNonStable = { String version ->
+    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { it -> version.toUpperCase().contains(it) }
+    def regex = /^[0-9,.v-]+(-r)?$/
+    return !stableKeyword && !(version ==~ regex)
+}
+
+tasks.named("dependencyUpdates").configure {
+    rejectVersionIf {
+        isNonStable(it.candidate.version)
     }
 }
